--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,9 @@ classifiers = [
 
 dependencies = [
     "pydantic>=2.12.5",
+    "rich>=14.2.0",
+    "typer>=0.21.1",
+    "typing-extensions>=4.15.0",
 ]
 
 [project.scripts]
