--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ classifiers = [
 ]
 
 dependencies = [
+    "ebook2text>=2.2.0",
     "pydantic>=2.12.5",
     "rich>=14.2.0",
     "typer>=0.21.1",
