--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ classifiers = [
 dependencies = [
     "ebook2text>=2.2.0",
     "pydantic>=2.12.5",
+    "pydantic-ai>=1.41.0",
     "rich>=14.2.0",
     "typer>=0.21.1",
     "typing-extensions>=4.15.0",
