--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ dependencies = [
     "ebook2text>=2.2.0",
     "pydantic>=2.12.5",
     "pydantic-ai>=1.41.0",
+    "python-dotenv>=1.2.1",
     "rich>=14.2.0",
     "typer>=0.21.1",
     "typing-extensions>=4.15.0",
