--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ dependencies = [
     "pydantic>=2.12.5",
     "pydantic-ai>=1.41.0",
     "python-dotenv>=1.2.1",
+    "reportlab>=4.4.7",
     "rich>=14.2.0",
     "typer>=0.21.1",
     "typing-extensions>=4.15.0",
