--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,15 @@ cli = [
     "typer>=0.21.1",
 ]
 
+[dependency-groups]
+dev = ["pre-commit>=4.2.0", { include-group = "testing" }]
+lint = ["mypy>=1.19.0", "ruff>=0.14.0"]
+testing = [
+    "pypdf>=6.6.0",
+    "pytest-cov>=7.0.0",
+    "pytest>=9.0.0",
+]
+
 [build-system]
 requires = ["uv_build>=0.9.18,<0.10.0"]
 build-backend = "uv_build"
@@ -54,6 +63,10 @@ build-backend = "uv_build"
 files = ["src/lorebinders/**/*.py"]
 ignore_missing_imports = true
 python_version = "3.10"
+
+[[tool.mypy.overrides]]
+module = "tests.unit.test_models"
+disable_error_code = ["call-arg", "arg-type"]
 
 [tool.ruff]
 exclude = [
@@ -64,7 +77,6 @@ exclude = [
     ".venv",
     ".vscode",
     "__pycache__",
-    "test*",
     "work",
 ]
 force-exclude = true
@@ -77,6 +89,9 @@ line-ending = "lf"
 [tool.ruff.lint]
 ignore = ["A002", "ANN002", "ANN003", "ANN204", "ANN401", "D100", "D417"]
 select = ["A", "ANN", "D", "DOC", "E", "F", "I", "N", "UP"]
+
+[tool.ruff.lint.per-file-ignores]
+"tests/**.py" = ["ANN", "D", "DOC"]
 
 [tool.ruff.lint.isort]
 #:reorderArrays false
@@ -95,10 +110,11 @@ mypy-init-return = true
 [tool.ruff.lint.pydocstyle]
 convention = "google"
 
-[tool.pytest.ini_options]
-addopts = ["--cov=lorebinders"]
+[tool.pytest]
+addopts = ["--cov=lorebinders", "--cov-fail-under=80"]
 pythonpath = ["src"]
 testpaths = ["tests"]
+markers = ["external: mark a test as requiring external an external dependency"]
 
 [tool.coverage.run]
 omit = [
@@ -120,14 +136,4 @@ exclude_also = [
     "if settings.DEBUG",
     "raise AssertionError",
     "raise NotImplementedError",
-]
-
-[dependency-groups]
-dev = ["pre-commit>=4.2.0", { include-group = "testing" }]
-lint = ["mypy>=1.15.0", "ruff>=0.11.11"]
-testing = [
-    "pypdf>=5.5.0",
-    "pytest-cov>=5.0.0",
-    "pytest-xdist>=3.6.1",
-    "pytest>=8.3.3",
 ]
